<resources>
    <string name="app_name">Mozulu</string>
    <string name="title_activity_daily_temps">Mozulu Forecast</string>
    <string name="title_activity_weather_details">Weather Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_refresh">Refresh</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>
    <string name="settings_app_info_title">App Info</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_version_number">1.0.0</string>
    <string name="settings_dark_sky_reference">Powered by Dark Sky</string>
    <string name="weather_icon_description">Weather Icon</string>
    <string name="no_connectivity_error_message">No Internet access. Please enable your network connection and try again.</string>
    <string name="location_permission_denied_error_message">Unfortunately, Mozulu requires access to your location in order to show weather forecasts.</string>
    <string name="forecast_request_failure_error_message">Opps, an error occurred connecting to the server, please try again.</string>
    <string name="retry_btn_action">Retry</string>
    <string name="permission_denied_btn_action">Allow access</string>
</resources>
