<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@color/colorAccentSecondary"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_activity_settings"
            android:textColor="@color/colorLightDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/night_mode_label_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_night_mode"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/night_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorLightDark"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLayoutBorder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings_app_info_title"
            android:textColor="@color/colorLightDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/version_title_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings_version_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/version_number_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:text="@string/settings_version_number"
            android:textColor="@color/colorLightDark"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLayoutBorder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDarkSkyReferenceLinkClicked"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/settings_dark_sky_reference"
            android:textColor="@color/colorLink"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

</ScrollView>